--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ table, tr, td{
     -webkit-justify-content: center;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .mainitem{
